prod/carawonga-com.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: carawonga-com
  name: carawonga-com
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: carawonga-com
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: carawonga-com
    spec:
      containers:
      - env:
        - name: dest
          value: https://carawonga.hu
        - name: keep_uri
          value: "true"
        image: cryptkiddie2/redirector
        imagePullPolicy: Always
        name: redirector
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
