prod/wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: wordpress
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - image: wordpress:5.6.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: web
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 5
        name: wordpress
        ports:
        - containerPort: 80
          name: web
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: web
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/www/html
          name: data
          subPath: html
      - image: nixery.dev/shell/rsync/openssh/vim
        command:
        - bash
        - -c
        - sleep 1d && echo "root:x:0:0:root:/root:/bin/bash" > /etc/passwd && cp .ssh/id_rsa . && chmod 400 id_rsa && rsync -az -e "ssh -p 2022 -i id_rsa -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null" --delete --exclude ShortpixelBackups --exclude .gitignore --exclude wp-content/uploads/cache --exclude wp-content/cache/cache-enabler /var/www/html carawonga@mhmxs.duckdns.org:/home/carawonga/backup/ && ssh -o "StrictHostKeyChecking no" -o "UserKnownHostsFile /dev/null" -i id_rsa -p20 [...]
        imagePullPolicy: IfNotPresent
        name: backup
        volumeMounts:
        - mountPath: /var/www/html
          name: data
          subPath: html
        - mountPath: ".ssh"
          name: readynas
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: wordpress-pv-claim
      - name: readynas
        secret:
          secretName: readynas
          defaultMode: 0400
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: default
spec:
  ports:
  - name: http-80
    port: 80
    protocol: TCP
    targetPort: web
  selector:
    app: wordpress
  sessionAffinity: None
  type: ClusterIP
