prod/traefik-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    meta.helm.sh/release-name: traefik
    meta.helm.sh/release-namespace: default
  labels:
    app.kubernetes.io/instance: traefik-default
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: traefik
    helm.sh/chart: traefik-23.0.1
  name: traefik
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: traefik-default
      app.kubernetes.io/name: traefik
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "9100"
        prometheus.io/scrape: "true"
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: traefik-default
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: traefik
        helm.sh/chart: traefik-23.0.1
    spec:
      containers:
      - args:
        #- --global.checknewversion
        #- --global.sendanonymoususage
        - --entrypoints.metrics.address=:9100/tcp
        - --entrypoints.traefik.address=:9000/tcp
        - --entrypoints.web.address=:8000/tcp
        - --entrypoints.websecure.address=:8443/tcp
        - --api.dashboard=false
        - --ping=true
        - --metrics.prometheus=true
        - --metrics.prometheus.entrypoint=metrics
        - --providers.kubernetescrd
        - --providers.kubernetesingress
        #- --entrypoints.web.http.redirections.entryPoint.to=:443
        #- --entrypoints.web.http.redirections.entryPoint.scheme=https
        - --entrypoints.websecure.http.tls=true
        - --entrypoints.websecure.http.tls.certresolver=letsencrypt
        - --entrypoints.websecure.http.tls.domains[0].main=carawonga.hu
        - --entrypoints.websecure.http.tls.domains[0].sans=www.carawonga.hu
        - --certificatesresolvers.letsencrypt.acme.email=carawonga@gmail.com
        - --certificatesresolvers.letsencrypt.acme.storage=/data/acme.json
        - --certificatesresolvers.letsencrypt.acme.httpchallenge.entrypoint=web
        image: docker.io/traefik:v2.10.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /ping
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 2
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        name: traefik
        ports:
        - containerPort: 9100
          name: metrics
          protocol: TCP
        - containerPort: 9000
          name: traefik
          protocol: TCP
        - containerPort: 8000
          name: web
          protocol: TCP
        - containerPort: 8443
          name: websecure
          protocol: TCP
        readinessProbe:
          failureThreshold: 1
          httpGet:
            path: /ping
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 2
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        resources: {}
        securityContext:
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          name: data
        - mountPath: /tmp
          name: tmp
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65532
      serviceAccount: traefik
      serviceAccountName: traefik
      terminationGracePeriodSeconds: 60
      volumes:
      - emptyDir: {}
        name: data
      - emptyDir: {}
        name: tmp
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wordpress-https
  namespace: default
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`carawonga.hu`) || Host(`www.carawonga.hu`)
    services:
    - name: wordpress
      port: 80
  tls:
    certResolver: letsencrypt
    domains:
    - main: carawonga.hu
      sans:
      - www.carawonga.hu
    secretName: carawonga-hu-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wordpress-http
  namespace: default
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    priority: 1
    match: Host(`carawonga.hu`) && PathPrefix(`/.well-known/`)
    services:
    - name: cm-acme-http-solver-5jntl
      port: 8089
  - kind: Rule
    priority: 1
    match: Host(`www.carawonga.hu`) && PathPrefix(`/.well-known/`)
    services:
    - name: cm-acme-http-solver-jlsk6
      port: 8089
  - kind: Rule
    priority: 2
    match: Host(`carawonga.hu`) || Host(`www.carawonga.hu`)
    middlewares:
    - name: https-redirect
    services:
    - name: wordpress
      port: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: default
spec:
  redirectScheme:
    permanent: true
    scheme: https
